tests/errors/error_display/test_hll_defer_reject_continue.si

        fn f() {
            loop {
                defer { continue; };
            };
        }
    