tests/errors/error_display/test_hll_defer_reject_continue.err.expected
error: at 4:25: [HTC-ControlFlowInDefer] In function 'f': continue is not allowed inside defer
   |
 4 |                 defer { continue; };
   |                         ^^^^^^^^
